kubernetes/apps/observability/grafana/instance/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.tholinka.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  annotations:
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/group: Observability
    gethomepage.dev/name: Grafana
    gethomepage.dev/icon: grafana.svg
    gethomepage.dev/pod-selector: app=grafana
spec:
  hostnames:
    - grafana.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: grafana-service
          port: 3000
